# ccx_runner

./: .gitignore  README.md  buildscript.py  pyproject.toml  requirements.txt  run.py  test.py
ccx_runner/: main.py
ccx_runner/ccx_logic/: calculate_mac.py  ccx_status.py  increment.py  iteration.py  result.py  run_ccx.py  status.py  step.py
ccx_runner/ccx_logic/complex_modal/: Eigenvector.py
ccx_runner/ccx_logic/static/: StaticStep.py  increment.py  iteration.py
ccx_runner/gui/: campbell_analysis.py  hauptfenster.py
