[build-system]
requires = ["setuptools>=61.0.0"] # src-layout requires setuptools 61+
build-backend = "setuptools.build_meta"

[project]
name = "ccx_runner"
version = "0.1.0"
authors = [
  { name="Quentin Huss", email="quentinhuss@hotmail.com" },
]
description = "Run and monitor Calculix Solutions in a GUI window"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools",
    "dearpygui",
    "platformdirs",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ccx_runner = "ccx_runner.main:main"

[tool.setuptools.packages.find]
where = ["."] # Search in the current directory
include = ["ccx_runner*"] # Include everything starting with "ccx_runner"
exclude = ["testfiles*"] # Exclude everything starting with "testfiles"
